fix: change shortcut to `ctrl+shift+L` (#8)

--- a/popup/styles.css
+++ b/popup/styles.css
@@ -1,6 +1,6 @@
 body {
   width: 300px;
-  height: 270px;
+  height: 300px;
   background-color: #f1f2f4;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
